<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGreen"
    tools:context=".Fragments.FragmentAboutUs">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="@color/golden"
            android:text="@string/muhammad_raza_saqib_mustafai"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/murshadimage"
            android:layout_gravity="center"/>
        <TextView
            android:fontFamily="@font/nastaleeq"
            android:textSize="22sp"
            android:layout_margin="10dp"
            android:textColor="@color/golden"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:fontFamily="@font/nastaleeq"
            android:textSize="22sp"
            android:layout_margin="10dp"
            android:textColor="@color/golden"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/education"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:fontFamily="@font/nastaleeq"
            android:textSize="22sp"
            android:layout_margin="10dp"
            android:textColor="@color/golden"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/Safar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:fontFamily="@font/nastaleeq"
            android:textSize="22sp"
            android:layout_margin="10dp"
            android:textColor="@color/golden"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/para4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:fontFamily="@font/nastaleeq"
            android:textSize="22sp"
            android:layout_margin="10dp"
            android:textColor="@color/golden"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/para5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:fontFamily="@font/nastaleeq"
            android:textSize="22sp"
            android:layout_margin="10dp"
            android:textColor="@color/golden"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/para6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:fontFamily="@font/nastaleeq"
            android:textSize="22sp"
            android:layout_margin="10dp"
            android:textColor="@color/golden"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/para7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:fontFamily="@font/nastaleeq"
            android:textSize="22sp"
            android:layout_margin="10dp"
            android:textColor="@color/golden"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/para8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:fontFamily="@font/nastaleeq"
            android:textSize="22sp"
            android:layout_margin="10dp"
            android:textColor="@color/golden"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/para9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>







    </LinearLayout>


</ScrollView>